--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,5 @@ jobs:
           HEADLESS: false
           PROGRESS: none
           NODE_ENV: test
+          NODE_OPTIONS: --max_old_space_size=4096
 
