--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -33,7 +33,7 @@
     "use-subscription": "1.4.1"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.x || 17.x"
   },
   "module": "dist/index.esm.js"
 }
