--- a/packages/renderer-mpa/package.json
+++ b/packages/renderer-mpa/package.json
@@ -27,9 +27,11 @@
   "dependencies": {
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "@umijs/runtime": "3.3.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@umijs/runtime": "3.3.5"
+  },
+  "peerDependencies": {
+    "react": "16.x || 17.x",
+    "react-dom": "16.x || 17.x"
   },
   "sideEffects": false,
   "module": "dist/index.esm.js"
