--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -3,7 +3,7 @@ name: Outdated Version Action
 on: push
 
 jobs:
-  release-helper:
+  outdated-version:
     runs-on: ubuntu-latest
     steps:
       - name: outdated version
