--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -13,6 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: outdated version
-        uses: ycjcl868/outdated-version-action@v1.x
+        uses: ycjcl868/outdated-version-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
