chore: on trigger

--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -1,12 +1,8 @@
 name: Outdated Version Action
 
 on:
-  push:
-      paths-ignore:
-        - '.github/**/*.md'
-        - 'examples/**'
-        - 'docs/**'
-        - '*.md'
+  pull_request:
+    types: [opened]
 
 jobs:
   outdated-version:
