--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -6,8 +6,11 @@ jobs:
   outdated-version:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+         fetch-depth: '1'
       - name: install
-        run: yarn install
+        run: yarn --ignore-engines
       - name: outdated version
         uses: ycjcl868/outdated-version-action@v1
         with:
