--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # otherwise, you will fail to push refs to dest repo
       - name: install
         run: yarn --ignore-engines
       - name: outdated version
