--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -1,12 +1,9 @@
-name: Outdated Version Action
-
 on:
-  issue_comment:
-    types: [created]
-
+  pull_request
+name: Outdated Version Action
 jobs:
   outdated-version:
-    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/version')
+    name: Outdated Version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
