--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn --ignore-engines
       - run: yarn build
-      - run: yarn test packages/bundler-webpack/src/index.test.ts --detectOpenHandles --forceExit
+      - run: yarn test --detectOpenHandles --maxWorkers=4 --forceExit
         env:
           CI: true
           HEADLESS: false
