--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -26,49 +26,31 @@
     "access": "public"
   },
   "devDependencies": {
+    "@types/sockjs-client": "1.1.1",
     "anymatch": "3.1.1"
   },
   "dependencies": {
     "@babel/core": "7.12.10",
-    "@types/sockjs-client": "1.1.1",
-    "@types/webpack": "4.41.25",
-    "@types/webpack-dev-middleware": "3.7.2",
     "@umijs/bundler-utils": "3.3.7",
+    "@umijs/deps": "0.2.3",
     "@umijs/types": "3.3.7",
     "@umijs/utils": "3.3.7",
     "babel-loader": "8.2.2",
-    "copy-webpack-plugin": "6.1.0",
-    "css-loader": "3.6.0",
-    "css-modules-typescript-loader": "4.0.1",
-    "file-loader": "6.2.0",
-    "friendly-errors-webpack-plugin": "1.7.0",
     "less": "3.12.2",
     "less-loader": "5.0.0",
-    "loader-utils": "^1.1.0",
     "mini-css-extract-plugin": "0.12.0",
     "normalize-url": "1.9.1",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
     "postcss": "7.0.32",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
-    "raw-loader": "4.0.2",
     "react-error-overlay": "6.0.8",
     "schema-utils": "^1.0.0",
     "sockjs-client": "1.5.0",
-    "speed-measure-webpack-plugin": "1.3.3",
-    "stats-webpack-plugin": "0.7.0",
     "strip-ansi": "6.0.0",
-    "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
-    "url-loader": "4.1.1",
-    "webpack": "4.44.1",
-    "webpack-chain": "6.5.1",
-    "webpack-dev-middleware": "3.7.2",
-    "webpack-manifest-plugin": "2.2.0",
-    "webpack-sources": "^1.1.0",
-    "webpackbar": "5.0.0-3"
+    "webpack": "4.44.1"
   },
   "bin": {
     "bundler-webpack": "bin/bundler-webpack.js"
