--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -24,36 +24,24 @@
     "access": "public"
   },
   "dependencies": {
-    "@hapi/joi": "16.1.8",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@types/merge-stream": "1.1.2",
-    "@types/multer": "1.4.3",
     "@types/react-router-config": "5.0.1",
-    "@types/serialize-javascript": "4.0.0",
     "@umijs/babel-preset-umi": "3.3.7",
     "@umijs/bundler-webpack": "3.3.7",
+    "@umijs/deps": "0.2.3",
     "@umijs/renderer-mpa": "3.3.7",
     "@umijs/renderer-react": "3.3.7",
     "@umijs/runtime": "3.3.7",
     "@umijs/server": "3.3.7",
     "@umijs/types": "3.3.7",
     "@umijs/utils": "3.3.7",
-    "cliui": "6.0.0",
     "es5-imcompatible-versions": "^0.1.62",
-    "fork-ts-checker-webpack-plugin": "6.0.5",
     "history-with-query": "4.10.4",
-    "joi2types": "~1.1.0",
-    "merge-stream": "2.0.0",
-    "multer": "1.4.2",
-    "path-to-regexp": "^1.7.0",
     "react-refresh": "0.9.0",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
     "react-router-dom": "5.2.0",
-    "regenerator-runtime": "0.13.5",
-    "serialize-javascript": "5.0.1",
-    "umi-webpack-bundle-analyzer": "3.6.0",
-    "zlib": "1.0.5"
+    "regenerator-runtime": "0.13.5"
   },
   "peerDependencies": {
     "react": "16.x || 17.x"
