--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,12 +30,6 @@
     "@types/sockjs": "0.3.32",
     "@types/spdy": "3.4.4",
     "@umijs/utils": "3.3.7",
-    "compression": "1.7.4",
-    "express": "4.17.1",
-    "http-proxy-middleware": "1.0.6",
-    "immer": "7.0.5",
-    "portfinder": "1.0.26",
-    "sockjs": "0.3.21",
-    "spdy": "4.0.2"
+    "@umijs/deps": "0.2.3"
   }
 }
