--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -27,31 +27,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/plugin-proposal-decorators": "7.12.1",
-    "@babel/plugin-proposal-do-expressions": "7.12.1",
-    "@babel/plugin-proposal-export-default-from": "7.12.1",
-    "@babel/plugin-proposal-function-bind": "7.12.1",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "7.12.1",
-    "@babel/plugin-proposal-pipeline-operator": "7.12.1",
-    "@babel/plugin-syntax-top-level-await": "7.12.1",
-    "@babel/plugin-transform-destructuring": "7.12.1",
-    "@babel/plugin-transform-runtime": "7.12.1",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-react": "7.12.1",
-    "@babel/preset-typescript": "7.12.1",
     "@babel/runtime": "7.12.5",
     "@svgr/webpack": "4.3.3",
     "@umijs/babel-plugin-auto-css-modules": "3.3.7",
     "@umijs/babel-plugin-import-to-await-require": "3.3.7",
-    "@umijs/babel-plugin-lock-core-js-3": "3.3.7",
-    "babel-plugin-dynamic-import-node": "2.3.3",
-    "babel-plugin-import": "^1.13.1",
-    "babel-plugin-named-asset-import": "0.3.7",
-    "babel-plugin-react-require": "3.1.3",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "babel-plugin-transform-typescript-metadata": "0.3.1"
+    "@umijs/babel-plugin-lock-core-js-3": "3.3.7"
   }
 }
