feat: less deps

--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -27,7 +27,10 @@
   },
   "devDependencies": {
     "@types/sockjs-client": "1.1.1",
-    "anymatch": "3.1.1"
+    "anymatch": "3.1.1",
+    "react-error-overlay": "6.0.8",
+    "sockjs-client": "1.5.0",
+    "strip-ansi": "6.0.0"
   },
   "dependencies": {
     "@umijs/bundler-utils": "3.3.7",
@@ -40,9 +43,6 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
-    "react-error-overlay": "6.0.8",
-    "sockjs-client": "1.5.0",
-    "strip-ansi": "6.0.0",
     "terser-webpack-plugin": "4.2.3",
     "webpack-chain": "6.5.1"
   },
