refactor: use @umijs/deps (#6148)
* refactor: use @umijs/deps

* chore: update

* fix: dts

* fix: testcase

* fix: some testcase

* fix: testcase and upgrade @umijs/deps to 0.2.8

* fix: some testcase

* fix: some testcases

* fix: some testcase

* chore: fix testcase

* fix: testcase

* fix: some testcase

* fix: test case

* feat: use less, less-loader and babel-loader from @umijs/deps

* feat: use babel related packages from @umijs/deps

* feat: use svgr from @umijs/deps

* chore: test coverage

* fix: testcase

* fix: build failed

* fix: testcase

* fix: dts

* feat: less deps

* fix: build failed

Co-authored-by: 名字 <邮箱>

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -25,12 +25,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/cheerio": "0.22.23",
-    "@types/express": "4.17.7",
-    "@types/webpack": "4.41.21",
     "@types/webpack-bundle-analyzer": "3.8.0",
     "@umijs/babel-preset-umi": "3.3.8",
     "@umijs/core": "3.3.8",
+    "@umijs/deps": "0.2.18",
     "@umijs/server": "3.3.8",
     "@umijs/utils": "3.3.8",
     "webpack-chain": "6.5.1"
