--- a/packages/babel-plugin-import-to-await-require/package.json
+++ b/packages/babel-plugin-import-to-await-require/package.json
@@ -25,12 +25,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/types": "7.12.6"
+    "@umijs/utils": "3.3.8"
   },
   "devDependencies": {
     "@babel/traverse": "7.12.5"
-  },
-  "peerDependencies": {
-    "@babel/core": "^7.12.3"
   }
 }
