--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,24 +26,9 @@
   "dependencies": {
     "@babel/core": "7.12.10",
     "@babel/register": "7.12.10",
-    "@hapi/joi": "16.1.8",
-    "@types/ejs": "3.0.5",
-    "@types/hapi__joi": "16.0.12",
-    "@types/marked": "^1.2.1",
-    "@types/marked-terminal": "^3.1.1",
-    "@types/prettier": "2.1.6",
-    "@types/tapable": "1.0.6",
     "@umijs/ast": "3.3.8",
     "@umijs/babel-preset-umi": "3.3.8",
-    "@umijs/error-code-map": "^1.0.1",
-    "@umijs/utils": "3.3.8",
-    "dotenv": "8.2.0",
-    "ejs": "3.1.5",
-    "marked": "1.2.7",
-    "marked-terminal": "4.1.0",
-    "os-locale": "5.0.0",
-    "prettier": "2.2.1",
-    "set-value": "3.0.2",
-    "tapable": "1.1.3"
+    "@umijs/deps": "0.2.18",
+    "@umijs/utils": "3.3.8"
   }
 }
