--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,18 +24,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/compression": "1.7.0",
-    "@types/express": "4.17.7",
     "@types/node": "14.0.23",
-    "@types/sockjs": "0.3.32",
-    "@types/spdy": "3.4.4",
     "@umijs/utils": "3.3.8",
-    "compression": "1.7.4",
-    "express": "4.17.1",
-    "http-proxy-middleware": "1.0.6",
-    "immer": "7.0.5",
-    "portfinder": "1.0.26",
-    "sockjs": "0.3.21",
-    "spdy": "4.0.2"
+    "@umijs/deps": "0.2.18"
   }
 }
