--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,48 +24,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/parser": "7.12.11",
-    "@babel/register": "7.12.10",
-    "@babel/traverse": "7.12.12",
-    "@babel/types": "7.12.12",
-    "@types/cheerio": "0.22.23",
-    "@types/color": "3.0.1",
-    "@types/cross-spawn": "6.0.2",
-    "@types/debug": "4.1.5",
-    "@types/glob": "7.1.3",
-    "@types/got": "9.6.11",
-    "@types/lodash": "4.14.167",
-    "@types/mkdirp": "1.0.1",
-    "@types/mustache": "4.1.0",
-    "@types/resolve": "1.17.1",
-    "@types/rimraf": "3.0.0",
-    "@types/semver": "7.3.4",
-    "@types/signale": "1.4.1",
-    "@types/yargs": "15.0.12",
-    "@types/yargs-parser": "15.0.0",
-    "address": "1.1.2",
-    "chalk": "4.1.0",
-    "cheerio": "1.0.0-rc.3",
-    "chokidar": "3.4.3",
-    "clipboardy": "2.3.0",
-    "color": "3.1.3",
-    "crequire": "1.8.1",
-    "cross-spawn": "7.0.3",
-    "debug": "4.3.1",
-    "deepmerge": "4.2.2",
-    "execa": "4.0.3",
-    "glob": "7.1.6",
-    "got": "9.6.0",
-    "lodash": "4.17.20",
-    "mkdirp": "1.0.4",
-    "mustache": "4.1.0",
-    "pkg-up": "3.1.0",
-    "portfinder": "1.0.28",
-    "resolve": "1.19.0",
-    "rimraf": "3.0.2",
-    "semver": "7.3.4",
-    "signale": "1.4.0",
-    "yargs": "15.4.1",
-    "yargs-parser": "18.1.3"
+    "@umijs/deps": "0.2.18"
   }
 }
