--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-webpack",
-  "version": "3.3.8",
+  "version": "3.4.0-beta.1",
   "description": "@umijs/bundler-webpack",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -33,10 +33,10 @@
     "strip-ansi": "6.0.0"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "3.3.8",
+    "@umijs/bundler-utils": "3.4.0-beta.1",
     "@umijs/deps": "0.2.18",
-    "@umijs/types": "3.3.8",
-    "@umijs/utils": "3.3.8",
+    "@umijs/types": "3.4.0-beta.1",
+    "@umijs/utils": "3.4.0-beta.1",
     "normalize-url": "1.9.1",
     "postcss": "7.0.32",
     "postcss-flexbugs-fixes": "4.2.1",
