--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "@types/babel__traverse": "7.0.13",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
-    "@umijs/core": "3.3.8",
+    "@umijs/core": "3.4.0-beta.1",
     "@umijs/plugin-analytics": "^0.2.2",
     "@umijs/preset-dumi": "^1.0.33",
-    "@umijs/test": "3.3.8",
-    "@umijs/test-utils": "3.3.8",
-    "@umijs/utils": "3.3.8",
+    "@umijs/test": "3.4.0-beta.1",
+    "@umijs/test-utils": "3.4.0-beta.1",
+    "@umijs/utils": "3.4.0-beta.1",
     "benchmark": "^2.1.4",
     "escape-goat": "^3.0.0",
     "father-build": "^1.19.0",
