--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/core",
-  "version": "3.3.8",
+  "version": "3.4.0-beta.1",
   "description": "@umijs/core",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,9 +26,9 @@
   "dependencies": {
     "@babel/core": "7.12.10",
     "@babel/register": "7.12.10",
-    "@umijs/ast": "3.3.8",
-    "@umijs/babel-preset-umi": "3.3.8",
+    "@umijs/ast": "3.4.0-beta.1",
+    "@umijs/babel-preset-umi": "3.4.0-beta.1",
     "@umijs/deps": "0.2.18",
-    "@umijs/utils": "3.3.8"
+    "@umijs/utils": "3.4.0-beta.1"
   }
 }
