--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/preset-built-in",
-  "version": "3.3.8",
+  "version": "3.4.0-beta.1",
   "description": "@umijs/preset-built-in",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,15 +26,15 @@
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@types/react-router-config": "5.0.1",
-    "@umijs/babel-preset-umi": "3.3.8",
-    "@umijs/bundler-webpack": "3.3.8",
+    "@umijs/babel-preset-umi": "3.4.0-beta.1",
+    "@umijs/bundler-webpack": "3.4.0-beta.1",
     "@umijs/deps": "0.2.18",
-    "@umijs/renderer-mpa": "3.3.8",
-    "@umijs/renderer-react": "3.3.8",
-    "@umijs/runtime": "3.3.8",
-    "@umijs/server": "3.3.8",
-    "@umijs/types": "3.3.8",
-    "@umijs/utils": "3.3.8",
+    "@umijs/renderer-mpa": "3.4.0-beta.1",
+    "@umijs/renderer-react": "3.4.0-beta.1",
+    "@umijs/runtime": "3.4.0-beta.1",
+    "@umijs/server": "3.4.0-beta.1",
+    "@umijs/types": "3.4.0-beta.1",
+    "@umijs/utils": "3.4.0-beta.1",
     "es5-imcompatible-versions": "^0.1.62",
     "history-with-query": "4.10.4",
     "react-refresh": "0.9.0",
