--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "npm-run-all": "^4.1.5",
     "open": "^7.0.4",
     "prettier": "^2.0.5",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "git-repo-info": "^2.1.1"
   },
   "repository": {
     "type": "git",
