--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -37,11 +37,11 @@
     "@umijs/utils": "3.4.0-beta.1",
     "es5-imcompatible-versions": "^0.1.62",
     "history-with-query": "4.10.4",
-    "ansi-html": "^0.0.7",
-    "error-stack-parser": "^2.0.6",
-    "html-entities": "^1.2.1",
-    "native-url": "^0.2.6",
-    "source-map": "^0.7.3",
+    "ansi-html": "0.0.7",
+    "error-stack-parser": "2.0.6",
+    "html-entities": "1.4.0",
+    "native-url": "0.2.6",
+    "source-map": "0.7.3",
     "react-refresh": "0.9.0",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
