--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-webpack",
-  "version": "3.4.0-beta.1",
+  "version": "3.4.0-beta.2",
   "description": "@umijs/bundler-webpack",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -33,20 +33,20 @@
     "strip-ansi": "6.0.0"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "3.4.0-beta.1",
+    "@umijs/bundler-utils": "3.4.0-beta.2",
     "@umijs/deps": "0.2.21",
-    "@umijs/types": "3.4.0-beta.1",
-    "@umijs/utils": "3.4.0-beta.1",
+    "@umijs/types": "3.4.0-beta.2",
+    "@umijs/utils": "3.4.0-beta.2",
+    "jest-worker": "26.6.2",
     "normalize-url": "1.9.1",
     "postcss": "7.0.32",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
-    "jest-worker": "26.6.2",
     "terser": "5.6.0",
-    "webpack-sources": "^1.4.3",
-    "webpack-chain": "6.5.1"
+    "webpack-chain": "6.5.1",
+    "webpack-sources": "^1.4.3"
   },
   "bin": {
     "bundler-webpack": "bin/bundler-webpack.js"
