--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -45,8 +45,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
     "terser": "5.6.0",
-    "webpack-chain": "6.5.1",
-    "webpack-sources": "^1.4.3"
+    "webpack-chain": "6.5.1"
   },
   "bin": {
     "bundler-webpack": "bin/bundler-webpack.js"
