--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/react": "^10.4.6",
     "@types/babel__core": "7.1.9",
     "@types/babel__traverse": "7.0.13",
+    "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
     "@umijs/core": "3.4.0-beta.6",
@@ -48,6 +49,7 @@
     "@umijs/test-utils": "3.4.0-beta.6",
     "@umijs/utils": "3.4.0-beta.6",
     "benchmark": "^2.1.4",
+    "dedent": "^0.7.0",
     "escape-goat": "^3.0.0",
     "father-build": "^1.19.0",
     "git-repo-info": "^2.1.1",
