--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -30,6 +30,7 @@
     "@babel/runtime": "7.12.5",
     "@umijs/babel-plugin-auto-css-modules": "3.4.0-beta.6",
     "@umijs/babel-plugin-import-to-await-require": "3.4.0-beta.6",
-    "@umijs/babel-plugin-lock-core-js-3": "3.4.0-beta.6"
+    "@umijs/babel-plugin-lock-core-js-3": "3.4.0-beta.6",
+    "@umijs/babel-plugin-no-anonymous-default-export": "3.4.0-beta.6"
   }
 }
