--- a/packages/babel-plugin-no-anonymous-default-export/package.json
+++ b/packages/babel-plugin-no-anonymous-default-export/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/babel-plugin-no-anonymous-default-export",
-  "version": "3.4.0-beta.7",
+  "version": "3.4.0",
   "description": "@umijs/babel-plugin-no-anonymous-default-export",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -25,6 +25,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/utils": "3.4.0-beta.7"
+    "@umijs/utils": "3.4.0"
   }
 }
