--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/core",
-  "version": "3.4.0-beta.7",
+  "version": "3.4.0",
   "description": "@umijs/core",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,9 +24,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/ast": "3.4.0-beta.7",
-    "@umijs/babel-preset-umi": "3.4.0-beta.7",
+    "@umijs/ast": "3.4.0",
+    "@umijs/babel-preset-umi": "3.4.0",
     "@umijs/deps": "0.2.31",
-    "@umijs/utils": "3.4.0-beta.7"
+    "@umijs/utils": "3.4.0"
   }
 }
