--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -46,6 +46,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
     "terser": "5.6.0",
+    "webpack": "4.44.1",
     "webpack-chain": "6.5.1"
   },
   "bin": {
