--- a/packages/babel-plugin-auto-css-modules/package.json
+++ b/packages/babel-plugin-auto-css-modules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/babel-plugin-auto-css-modules",
-  "version": "3.4.2",
+  "version": "3.4.3-beta.1",
   "description": "@umijs/babel-plugin-auto-css-modules",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
