--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/babel-preset-umi",
-  "version": "3.4.3-beta.1",
+  "version": "3.4.3",
   "description": "@umijs/babel-preset-umi",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "@babel/runtime": "7.12.5",
-    "@umijs/babel-plugin-auto-css-modules": "3.4.3-beta.1",
-    "@umijs/babel-plugin-import-to-await-require": "3.4.3-beta.1",
-    "@umijs/babel-plugin-lock-core-js-3": "3.4.3-beta.1",
-    "@umijs/babel-plugin-no-anonymous-default-export": "3.4.3-beta.1"
+    "@umijs/babel-plugin-auto-css-modules": "3.4.3",
+    "@umijs/babel-plugin-import-to-await-require": "3.4.3",
+    "@umijs/babel-plugin-lock-core-js-3": "3.4.3",
+    "@umijs/babel-plugin-no-anonymous-default-export": "3.4.3"
   }
 }
