--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -36,7 +36,8 @@
     "@umijs/types": "3.4.3",
     "@umijs/utils": "3.4.3",
     "react": "16.x",
-    "react-dom": "16.x"
+    "react-dom": "16.x",
+    "v8-compile-cache": "2.3.0"
   },
   "bin": {
     "umi": "bin/umi.js"
