feat: upgrade webpack 5 to 5.35.1 and hook webpack/lib/Chunk

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "commit-msg": "node scripts/verifyCommit.js"
   },
   "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
+    "*.{jsx,less,md,json}": [
       "prettier --write"
     ],
     "*.ts?(x)": [
