--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@umijs/test-utils": "3.4.13",
     "@umijs/utils": "3.4.13",
     "benchmark": "^2.1.4",
+    "coffee": "^5.4.0",
     "dedent": "^0.7.0",
     "escape-goat": "^3.0.0",
     "father-build": "1.19.2",
