--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -88,6 +88,7 @@
     "@types/mkdirp": "1.0.1",
     "@types/multer": "1.4.5",
     "@types/mustache": "4.1.1",
+    "@types/prompts": "2.0.1",
     "@types/resolve": "1.20.0",
     "@types/rimraf": "3.0.0",
     "@types/semver": "7.3.4",
@@ -130,6 +131,7 @@
     "deepmerge": "4.2.2",
     "dotenv": "8.2.0",
     "dts-bundle-generator": "^5.6.0",
+    "dts-packer": "^0.0.1-alpha.1",
     "ejs": "3.1.5",
     "error-stack-parser": "2.0.6",
     "execa": "4.0.3",
@@ -162,6 +164,7 @@
     "path-to-regexp": "1.8.0",
     "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
+    "prompts": "2.1.0",
     "raw-loader": "4.0.2",
     "resolve": "1.19.0",
     "resolve-cwd": "3.0.0",
