--- a/packages/create-umi-app/package.json
+++ b/packages/create-umi-app/package.json
@@ -26,7 +26,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/utils": "3.4.15"
+    "@umijs/utils": "3.4.15",
+    "load-examples": "1.0.3"
   },
   "bin": {
     "create-umi-app": "bin/create-umi-app.js"
