feat: create umi app support exxample

--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -71,6 +71,7 @@
     "@svgr/webpack": "4.3.3",
     "@taskr/clear": "1.1.0",
     "@taskr/esnext": "1.1.0",
+    "@types/async-retry": "1.4.2",
     "@types/babel__traverse": "^7.11.1",
     "@types/body-parser": "1.19.0",
     "@types/color": "3.0.1",
@@ -100,6 +101,7 @@
     "@types/sockjs": "0.3.32",
     "@types/spdy": "3.4.4",
     "@types/tapable": "1.0.6",
+    "@types/tar": "4.0.4",
     "@types/webpack": "4.41.26",
     "@types/webpack-dev-middleware": "3.7.2",
     "@types/webpack-sources": "1.4.2",
@@ -110,6 +112,7 @@
     "@vercel/ncc": "0.28.5",
     "address": "1.1.2",
     "ansi-html": "0.0.7",
+    "async-retry": "1.3.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "babel-plugin-import": "1.13.3",
@@ -176,12 +179,14 @@
     "set-value": "3.0.2",
     "signale": "1.4.0",
     "sockjs": "0.3.21",
+    "sort-package-json": "1.50.0",
     "source-map": "0.7.3",
     "spdy": "4.0.2",
     "speed-measure-webpack-plugin": "1.3.3",
     "stats-webpack-plugin": "0.7.0",
     "style-loader": "1.3.0",
     "tapable": "1.1.3",
+    "tar": "6.1.0",
     "taskr": "1.1.0",
     "umi-webpack-bundle-analyzer": "3.6.2",
     "url-loader": "4.1.1",
