--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "new-github-release-url": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "open": "^8.0.2",
-    "prettier": "^2.0.5",
+    "prettier": "2.2.1",
     "umi-plugin-hire": "^1.0.3",
     "yorkie": "^2.0.0"
   },
