--- a/examples/with-tailwind/package.json
+++ b/examples/with-tailwind/package.json
@@ -1,42 +1,23 @@
 {
-  "private": true,
+  "name": "with-tailwind",
+  "version": "1.0.0",
+  "description": "UmiJs with tailwindcss",
+  "main": "index.js",
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
-    "postinstall": "umi generate tmp",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
-  },
+  "keywords": [
+    "UmiJs",
+    "tailwind"
+  ],
+  "author": "beysong",
+  "license": "ISC",
   "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
-    "@umijs/preset-react": "1.x",
-    "autoprefixer": "9.x",
     "postcss": "7.x",
     "postcss-import": "12.x",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "umi": "^3.4.20"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@umijs/test": "^3.4.20",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.0",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
+    "umi": "latest"
   }
 }
