fix: ci JavaScript heap out of memory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           command: yarn build
       - run:
           name: Run Tests
-          command: yarn test:coverage --forceExit --detectOpenHandles --runInBand
+          command: NODE_OPTIONS='--max-old-space-size=8192' yarn test:coverage --forceExit --detectOpenHandles --runInBand
           no_output_timeout: 300m
       - run:
           name: Generate coverage
