--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -186,6 +186,7 @@
     "umi-webpack-bundle-analyzer": "3.6.2",
     "url-loader": "4.1.1",
     "webpack": "4.46.0",
+    "webpack-assets-manifest": "3.1.1",
     "webpack-chain": "6.5.1",
     "webpack-dev-middleware": "3.7.2",
     "webpack-manifest-plugin": "3.1.0",
