fix: config extraBabelIncludes is absolute, nodeModules all transform (#6632)
* fix: config extraBabelIncludes is absolute, nodeModules all transform

* chore: add jest test

* fix: JavaScript heap out of memory

* chore: code style

* fix: windows set NODE_OPTIONS

* fix: window set NODE_OPTIONS

* fix: ci JavaScript heap out of memory

* chore: add github ci NODE_OPTIONS

* fix: github ci env

* fix: ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,4 @@ jobs:
           HEADLESS: false
           PROGRESS: none
           NODE_ENV: test
+          NODE_OPTIONS: --max_old_space_size=4071
