--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ jobs:
         displayName: install
       - script: yarn build
         displayName: build
-      - script: yarn test --forceExit --detectOpenHandles --maxWorkers=4
+      - script: set NODE_OPTIONS='--max-old-space-size=4071' && yarn test --forceExit --detectOpenHandles --maxWorkers=2
         env:
           PROGRESS: none
           CI: true
@@ -66,7 +66,7 @@ jobs:
       - script: yarn --frozen-lockfile
       - script: yarn build
         displayName: build
-      - script: yarn test --forceExit --detectOpenHandles --maxWorkers=4
+      - script: NODE_OPTIONS='--max-old-space-size=4071' yarn test --forceExit --detectOpenHandles --maxWorkers=4
         env:
           PROGRESS: none
           CI: true
@@ -97,7 +97,7 @@ jobs:
       - script: yarn --frozen-lockfile
       - script: yarn build
         displayName: build
-      - script: yarn test --forceExit --detectOpenHandles --maxWorkers=4
+      - script: NODE_OPTIONS='--max-old-space-size=4071' yarn test --forceExit --detectOpenHandles --maxWorkers=4
         env:
           PROGRESS: none
           CI: true
