--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         node_version: [12.x, 14.x, 16.x]
         os: [ubuntu-latest, macos-latest]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
         with:
@@ -34,7 +35,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - name: install
         if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn --ignore-engines
+        run: yarn --ignore-engines --frozen-lockfile
       - run: yarn build
       - run: yarn run tsc --noEmit
       - run: yarn test --detectOpenHandles --maxWorkers=1 --forceExit
@@ -43,4 +44,4 @@ jobs:
           HEADLESS: false
           PROGRESS: none
           NODE_ENV: test
-          NODE_OPTIONS: --max_old_space_size=4071
+          NODE_OPTIONS: --max_old_space_size=6144
