--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Node CI
 
+env:
+  NODE_OPTIONS: --max-old-space-size=6144
+
 on:
   push:
     paths-ignore:
@@ -44,4 +47,3 @@ jobs:
           HEADLESS: false
           PROGRESS: none
           NODE_ENV: test
-          NODE_OPTIONS: --max_old_space_size=6144
