feat: add mfsu feature (#6566)
* feat: add mfsu feature

* feat: 完善插件，提高可用性

* fix: fix comment

* fix: tsc problems

* docs: mfsu docs

* feat: mfsu improve 1 (#6591)

* chore: code format with prettier

* chore: use api.service.configInstance.configFile instead of api.getConfigPath

* chore: code style

* chore: make .mfsu under .cache

* chore: use onStart

* chore: use api.enableBy.config for simplity

* test: fix ci

* test: fix ci

* fix: fs node compatibility

* test: fix ci

* test: fix ci

* fix: known problems

- [x] 用户不用手动安装 @umijs/runtime 和 @umijs/renderer-react
- [x] 配置未开启的提示
- [x] 项目无 package.json 时兼容处理
- [ ] dynamic import 带来的额外 react 依赖

* fix: 补充上一个 commit

* Update packages/preset-built-in/src/plugins/features/mfsu/mfsu.ts

* fix: unexcept react bundled (#6599)

* fix: type error

* fix: Buffer 依赖处理、预编译文件特殊 prefix

* feat: pre-build file cache with hash

* feat: antd auto less, polyfill modify, upgrade polyfill tpl to esm

* feat: prod mode support & some change

- standard config name: mfsu.extraDeps => mfsu.includes
- custom exclude supported: mfsu.excludes
- dev mode output path supported: mfsu.development.output
- prod mode supported: prod mode enable by mfsu.production
- prod mode output path supported: mfsu.production.output

* feat: 支持 antd-pro

* fix: auto remove @umijs/plugin- and umi-plugin- deps

* feat: 优化重新编译条件，减依赖时不重新编译

* test: add mfsu functions test

* docs: upgrade mfsu speed image

* fix: mfsu 生产产物深层目录复制

* docs: 添加生产构建数据

* docs: optz doc 1

* fix: optz code 1

* docs: en docs

* fix: fix comment problem

* fix: remove unused code

* feat: supports public path

* fix: optz modify  preset

* chore: mfsu improve 3 (#6677)

* chore: fix version of @umijs/deps

* fix: use api.cwd instead of process.cwd()

* chore: more detailed error info

* chore: detail error message

* chore: add items schema for array

* fix: add mime dep

* 

--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -27,6 +27,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@umijs/deps": "3.4.24",
     "@babel/runtime": "7.12.5",
     "@umijs/babel-plugin-auto-css-modules": "3.4.24",
     "@umijs/babel-plugin-import-to-await-require": "3.4.24",
